Update selectin count on main window

Update the amount of images selected when selection is made on main
window using the date bar.

BUG: 220377